--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ snap = "1.1.1"
 bitter = "0.7"
 
 phf = { version = "0.11", features = ["macros"] }
+regex = "1.10.6"
+
+[dev-dependencies]
+pretty_assertions = { version  = "1.4" }
 
 [build-dependencies]
 prost-build = { version = "0.13.2" }
