--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Protobufs"]
 	path = Protobufs
-	url = git@github.com:SteamDatabase/Protobufs.git
+	url = https://github.com/SteamDatabase/Protobufs.git
